--- a/qml.qrc
+++ b/qml.qrc
@@ -412,5 +412,79 @@
         <file>image/DK_theoTang/L/8.jpg</file>
         <file>image/DK_theoTang/L/9.jpg</file>
         <file>image/DK_theoTang/G/12A.jpg</file>
+        <file>viewPhongNgu1.qml</file>
+        <file>image/NoiThat/1PN/1.jpg</file>
+        <file>image/NoiThat/1PN/2.jpg</file>
+        <file>image/NoiThat/1PN/3.jpg</file>
+        <file>image/NoiThat/1PN/4.jpg</file>
+        <file>image/NoiThat/1PN/5.jpg</file>
+        <file>image/NoiThat/1PN/6.jpg</file>
+        <file>image/NoiThat/2PN/1.jpg</file>
+        <file>image/NoiThat/2PN/10.jpg</file>
+        <file>image/NoiThat/2PN/11.jpg</file>
+        <file>image/NoiThat/2PN/12.jpg</file>
+        <file>image/NoiThat/2PN/13.jpg</file>
+        <file>image/NoiThat/2PN/2.jpg</file>
+        <file>image/NoiThat/2PN/3.jpg</file>
+        <file>image/NoiThat/2PN/4.jpg</file>
+        <file>image/NoiThat/2PN/5.jpg</file>
+        <file>image/NoiThat/2PN/6.jpg</file>
+        <file>image/NoiThat/2PN/7.jpg</file>
+        <file>image/NoiThat/2PN/8.jpg</file>
+        <file>image/NoiThat/2PN/9.jpg</file>
+        <file>image/NoiThat/3PN/1.jpg</file>
+        <file>image/NoiThat/3PN/10.jpg</file>
+        <file>image/NoiThat/3PN/11.jpg</file>
+        <file>image/NoiThat/3PN/12.jpg</file>
+        <file>image/NoiThat/3PN/13.jpg</file>
+        <file>image/NoiThat/3PN/14.jpg</file>
+        <file>image/NoiThat/3PN/15.jpg</file>
+        <file>image/NoiThat/3PN/16.jpg</file>
+        <file>image/NoiThat/3PN/2.jpg</file>
+        <file>image/NoiThat/3PN/3.jpg</file>
+        <file>image/NoiThat/3PN/4.jpg</file>
+        <file>image/NoiThat/3PN/5.jpg</file>
+        <file>image/NoiThat/3PN/6.jpg</file>
+        <file>image/NoiThat/3PN/7.jpg</file>
+        <file>image/NoiThat/3PN/8.jpg</file>
+        <file>image/NoiThat/3PN/9.jpg</file>
+        <file>image/NoiThat/4PN/1.jpg</file>
+        <file>image/NoiThat/4PN/2.jpg</file>
+        <file>image/NoiThat/4PN/3.jpg</file>
+        <file>image/NoiThat/4PN/4.jpg</file>
+        <file>image/NoiThat/4PN/5.jpg</file>
+        <file>image/NoiThat/4PN/6.jpg</file>
+        <file>image/NoiThat/4PN/7.jpg</file>
+        <file>image/NoiThat/DUPLEX/1.jpg</file>
+        <file>image/NoiThat/DUPLEX/10.jpg</file>
+        <file>image/NoiThat/DUPLEX/11.jpg</file>
+        <file>image/NoiThat/DUPLEX/12.jpg</file>
+        <file>image/NoiThat/DUPLEX/13.jpg</file>
+        <file>image/NoiThat/DUPLEX/14.jpg</file>
+        <file>image/NoiThat/DUPLEX/15.jpg</file>
+        <file>image/NoiThat/DUPLEX/16.jpg</file>
+        <file>image/NoiThat/DUPLEX/17.jpg</file>
+        <file>image/NoiThat/DUPLEX/18.jpg</file>
+        <file>image/NoiThat/DUPLEX/19.jpg</file>
+        <file>image/NoiThat/DUPLEX/2.jpg</file>
+        <file>image/NoiThat/DUPLEX/20.jpg</file>
+        <file>image/NoiThat/DUPLEX/21.jpg</file>
+        <file>image/NoiThat/DUPLEX/22.jpg</file>
+        <file>image/NoiThat/DUPLEX/23.jpg</file>
+        <file>image/NoiThat/DUPLEX/24.jpg</file>
+        <file>image/NoiThat/DUPLEX/3.jpg</file>
+        <file>image/NoiThat/DUPLEX/4.jpg</file>
+        <file>image/NoiThat/DUPLEX/5.jpg</file>
+        <file>image/NoiThat/DUPLEX/6.jpg</file>
+        <file>image/NoiThat/DUPLEX/7.jpg</file>
+        <file>image/NoiThat/DUPLEX/8.jpg</file>
+        <file>image/NoiThat/DUPLEX/9.jpg</file>
+        <file>image/next.png</file>
+        <file>image/previous.png</file>
+        <file>image/shadow.png</file>
+        <file>viewPhongNgu2.qml</file>
+        <file>viewPhongNgu3.qml</file>
+        <file>viewPhongNgu4.qml</file>
+        <file>viewDuplex.qml</file>
     </qresource>
 </RCC>
